<resources>
    <string name="app_name">PIU</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_with_fingerprint">Login with fingerprint</string>
    <string name="my_home">My Home</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tell_us_more">Tell Us More</string>
    <string name="done">DONE</string>
    <string name="thank_you_for_your_feedback">Thank you for your feedback!</string>
    <string name="how_much_do_you_enjoy_your_smart_house">How much do you enjoy Your Smart House?</string>
    <string name="angry_smiley">Angry smiley</string>
    <string name="sad_smiley">Sad smiley</string>
    <string name="neutral_smiley">Neutral smiley</string>
    <string name="happy_smiley">Happy smiley</string>
    <string name="very_happy_smiley">Very happy smiley</string>
    <string name="your_feedback">Your feedback</string>
    <string name="contact_us">Contact Us</string>
    <string name="chat">chat</string>
    <string name="non_odio_euismod">Non odio euismod</string>
    <string name="lacinia_at_quis">lacinia at quis</string>
    <string name="text1">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
    <string name="auctor_neque">auctor neque</string>
    <string name="a_cras_semper">A cras semper</string>
    <string name="text2">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis. Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis. Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
    <string name="ultricies_mi_eget">ultricies mi eget</string>
    <string name="maecenas">Maecenas</string>
    <string name="our_email">Our email:</string>
    <string name="email">smarthome@smarthome.com</string>
    <string name="send_us_a_message">Send us a message</string>
    <string name="tipical_response_in_2_working_days">Tipical response in 2 working days.</string>
    <string name="name">name</string>
    <string name="email_address">email address</string>
    <string name="send_message">send message</string>
    <string name="eugene_lawson">Eugene Lawson</string>
    <string name="hey_there_robert_how_can_i_help_you_today">Hey there Robert, How can I help you today?</string>
    <string name="hey_eugene_i_think_i_left_one_of_the_doors_open">Hey Eugene. I think I left one of the doors open...</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
    <string name="brandon_moore">Brandon Moore</string>
    <string name="admin">admin</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="users">Users</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password Again</string>
    <string name="music">Music</string>
    <string name="notification1">12:03  Music turned on</string>
    <string name="notification2">"12:51 Lights turned off</string>
    <string name="electric_energy_consumption">Electric energy consumption</string>
    <string name="_0_1">0.1</string>
    <string name="tv">TV</string>
    <string name="_0_2">0.2</string>
    <string name="laptop">laptop</string>
    <string name="_0_8">0.8</string>
    <string name="fridge">fridge</string>
    <string name="_1_0">1.0</string>
    <string name="others">others</string>
    <string name="tv_consumption">TV consumption</string>
</resources>
