<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#50D3D3D3"
        android:src="@drawable/ic_person_grey_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/brandon_moore"
        android:textColor="#000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/admin"
        android:textColor="#000" />

    <TextView
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/question_border"
        android:paddingStart="15dp"
        android:text="@string/change_password"
        android:textColor="#000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/question_border"
        android:paddingStart="15dp"
        android:text="@string/users"
        android:textColor="#000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/question_border"
        android:paddingStart="15dp"
        android:text="@string/logout"
        android:textColor="#000"
        android:textSize="25sp" />

</LinearLayout>