<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_angry"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/angry_smiley"
            android:src="@drawable/delete_all" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/notification1"
        android:textSize="27sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/notification2"
        android:textSize="27sp" />
</LinearLayout>